tests/textual/error/mapData.uplc
(program 0.0.0 [(builtin mapData)
                (con pair (data) (data)
                     ({ Integer 0 }, {Integer 1}))])
